# Copyright 2015 the Massachusetts Institute of Technology
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License.  You may obtain a copy of
# the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
# License for the specific language governing permissions and limitations under
# the License.

ACLOCAL_AMFLAGS = -I m4

CPPFLAGS = \
	-Wall \
	-D_FORTIFY_SOURCE=2 \
	@OpenSSL_CFLAGS@

CXXFLAGS = \
	-std=c++11 \
	-ftrapv \
	-fstack-protector-strong --param=ssp-buffer-size=4 \
	-fPIE \
	-O2 \
	@OpenSSL_CFLAGS@

CXXFLAGS += \
	-Weverything \
	-Wno-c++98-compat

LDFLAGS = \
	-Wl,-Bsymbolic-functions \
	-Wl,-z,relro \
	-pie

lib_LTLIBRARIES = liburweb_crypto_hash_openssl.la

liburweb_crypto_hash_openssl_la_SOURCES = src/hashFFI.cc
liburweb_crypto_hash_openssl_la_DATA = \
	src/lib.urp \
	src/hashFFI.h \
	src/hash.urs \
	src/hash.ur \
	src/hashFFI.urs

liburweb_crypto_hash_openssl_la_LIBADD = @OpenSSL_LIBS@ -lurweb
liburweb_crypto_hash_openssl_la_LDFLAGS = -export-symbols-regex '^uw_HashFFI_'

liburweb_crypto_hash_openssl_ladir = $(datadir)/urweb/ur/crypto-hash-openssl

EXTRA_DIST = \
	LICENSE \
	$(liburweb_crypto_hash_openssl_la_DATA)
